# SKYWALKER

./: .gitignore  BLISS.py  Example_Spitzer_Phase_Curve_Analysis.ipynb  FigureSystematics.py  KRdata.py  LICENSE  MANIFEST.in  PLD.py  README.md  README.rst  bliss.py  cat_transits.py  emcee.joblib.save  emceefinal.joblib.save  figure1.py  fit_transit.py  fit_transits.py  gj1214b_planet_params.json  krdata.py  lmfit_example.py  models.py  plot_corner.py  plot_phase.py  setup.cfg  setup.py  slice_transits.py  synod.py  utils.py
docs/: conf.py  index.rst
docs/synod/: index.rst
double_sigmoid/: DoubleSigmoidPhaseCurve.ipynb
helpers/: fit_spiderman_to_starry.py
notebooks/: Degree2Sigmoid.ipynb  DoubleSigmoidPhaseCurve.ipynb
old_files/: FigureSystematics.py  fit_group.py
orig_files/: FigureSystematics.py  fit_group.py  fit_transits.py
scripts/: spitzer_krdata_analysis.py  spitzer_ultranest_analysis.py  spitzer_ultranest_utils.py  spitzer_utils.py
skywalker/: __init__.py  bliss.py  conftest.py  krdata.py  models.py  pld.py  skywalker.py  utils.py
skywalker/synod/: models.py  utils.py
synod/: __init__.py  bliss.py  models.py  synod.py  utils.py
